/**
 * ============================================================================
 * gRPC User Service - Protocol Buffer Definition
 * ============================================================================
 * 
 * This proto file defines pagination and filtering patterns for gRPC APIs.
 * 
 * Compile: protoc --js_out=import_style=commonjs,binary:. \
 *                 --grpc_out=grpc_js:. \
 *                 --plugin=protoc-gen-grpc=$(which grpc_tools_node_protoc_plugin) \
 *                 user.proto
 * 
 * ============================================================================
 */

syntax = "proto3";

package users.v1;

option java_package = "com.example.users.v1";
option go_package = "github.com/example/users/v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";


/**
 * ============================================================================
 * USER SERVICE
 * ============================================================================
 */
service UserService {
  // Unary: Get single user
  rpc GetUser(GetUserRequest) returns (User);
  
  // Unary: List users with offset pagination
  // Use for: Admin dashboards, small datasets, page-number navigation
  rpc ListUsersOffset(ListUsersOffsetRequest) returns (ListUsersOffsetResponse);
  
  // Unary: List users with cursor pagination  
  // Use for: Large datasets, infinite scroll, real-time feeds
  rpc ListUsersCursor(ListUsersCursorRequest) returns (ListUsersCursorResponse);
  
  // Server streaming: Stream all matching users
  // Use for: Exporting large datasets, real-time feeds, data sync
  rpc StreamUsers(StreamUsersRequest) returns (stream User);
  
  // Unary: Search users with advanced filtering
  rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse);
}


/**
 * ============================================================================
 * USER MESSAGE
 * ============================================================================
 */
message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  int32 age = 5;
  UserStatus status = 6;
  UserRole role = 7;
  google.protobuf.Timestamp created_at = 8;
  string department = 9;
  int64 salary = 10;
}

enum UserStatus {
  USER_STATUS_UNSPECIFIED = 0;
  USER_STATUS_ACTIVE = 1;
  USER_STATUS_INACTIVE = 2;
  USER_STATUS_PENDING = 3;
}

enum UserRole {
  USER_ROLE_UNSPECIFIED = 0;
  USER_ROLE_ADMIN = 1;
  USER_ROLE_USER = 2;
  USER_ROLE_MODERATOR = 3;
}


/**
 * ============================================================================
 * GET USER
 * ============================================================================
 */
message GetUserRequest {
  string id = 1;
}


/**
 * ============================================================================
 * PAGINATION METHOD 1: OFFSET-BASED
 * ============================================================================
 * 
 * ┌─────────────────────────────────────────────────────────────────────────┐
 * │ PROS                                                                    │
 * ├─────────────────────────────────────────────────────────────────────────┤
 * │ ✓ Simple to understand and implement                                   │
 * │ ✓ Can jump to any page directly                                        │
 * │ ✓ Easy to show total count and "Page X of Y"                           │
 * │ ✓ Works well with traditional pagination UI                            │
 * └─────────────────────────────────────────────────────────────────────────┘
 * 
 * ┌─────────────────────────────────────────────────────────────────────────┐
 * │ CONS                                                                    │
 * ├─────────────────────────────────────────────────────────────────────────┤
 * │ ✗ Performance degrades with large offsets (O(n) scan)                  │
 * │ ✗ Data inconsistency with concurrent inserts/deletes                   │
 * │ ✗ Not suitable for real-time data                                      │
 * └─────────────────────────────────────────────────────────────────────────┘
 * 
 * ┌─────────────────────────────────────────────────────────────────────────┐
 * │ WHEN TO USE                                                             │
 * ├─────────────────────────────────────────────────────────────────────────┤
 * │ • Admin dashboards with page navigation                                │
 * │ • Small datasets (< 10K records)                                       │
 * │ • Static data that rarely changes                                      │
 * │ • When users need to jump to specific pages                            │
 * └─────────────────────────────────────────────────────────────────────────┘
 */
message ListUsersOffsetRequest {
  // Page size (default: 20, max: 100)
  int32 page_size = 1;
  
  // Page number (1-indexed, default: 1)
  int32 page_number = 2;
  
  // Filter criteria
  UserFilter filter = 3;
  
  // Sort order
  UserSort sort = 4;
}

message ListUsersOffsetResponse {
  // List of users
  repeated User users = 1;
  
  // Total number of matching users
  int32 total_count = 2;
  
  // Total number of pages
  int32 total_pages = 3;
  
  // Current page number
  int32 current_page = 4;
  
  // Has more pages
  bool has_next_page = 5;
  bool has_previous_page = 6;
}


/**
 * ============================================================================
 * PAGINATION METHOD 2: CURSOR-BASED
 * ============================================================================
 * 
 * ┌─────────────────────────────────────────────────────────────────────────┐
 * │ PROS                                                                    │
 * ├─────────────────────────────────────────────────────────────────────────┤
 * │ ✓ Consistent O(1) performance regardless of position                   │
 * │ ✓ No missing/duplicate items when data changes                         │
 * │ ✓ Perfect for infinite scroll and real-time feeds                      │
 * │ ✓ Works great with large datasets (millions of records)                │
 * │ ✓ Efficient with proper indexing                                       │
 * └─────────────────────────────────────────────────────────────────────────┘
 * 
 * ┌─────────────────────────────────────────────────────────────────────────┐
 * │ CONS                                                                    │
 * ├─────────────────────────────────────────────────────────────────────────┤
 * │ ✗ Cannot jump to arbitrary page                                        │
 * │ ✗ Cannot easily show "Page X of Y"                                     │
 * │ ✗ More complex implementation                                          │
 * │ ✗ Cursor can become invalid if referenced item deleted                 │
 * └─────────────────────────────────────────────────────────────────────────┘
 * 
 * ┌─────────────────────────────────────────────────────────────────────────┐
 * │ WHEN TO USE                                                             │
 * ├─────────────────────────────────────────────────────────────────────────┤
 * │ • Large datasets (> 10K records)                                       │
 * │ • Infinite scroll UIs                                                  │
 * │ • Real-time feeds (notifications, activity)                            │
 * │ • When data consistency during pagination is critical                  │
 * │ • Mobile applications                                                  │
 * └─────────────────────────────────────────────────────────────────────────┘
 */
message ListUsersCursorRequest {
  // Number of results to return (default: 20, max: 100)
  int32 page_size = 1;
  
  // Cursor for pagination (opaque string)
  // Empty string or omitted = start from beginning
  string page_token = 2;
  
  // Filter criteria
  UserFilter filter = 3;
  
  // Sort order
  UserSort sort = 4;
}

message ListUsersCursorResponse {
  // List of users
  repeated User users = 1;
  
  // Token for next page (empty if no more results)
  string next_page_token = 2;
  
  // Has more results
  bool has_more = 3;
  
  // Optional: total count (expensive to compute, may be omitted)
  // Using wrapper to distinguish between "0" and "not computed"
  google.protobuf.Int32Value total_count = 4;
}


/**
 * ============================================================================
 * PAGINATION METHOD 3: SERVER STREAMING
 * ============================================================================
 * 
 * ┌─────────────────────────────────────────────────────────────────────────┐
 * │ PROS                                                                    │
 * ├─────────────────────────────────────────────────────────────────────────┤
 * │ ✓ No pagination needed - streams all results                           │
 * │ ✓ Memory efficient - process items one at a time                       │
 * │ ✓ Real-time delivery of results                                        │
 * │ ✓ Perfect for exports and data sync                                    │
 * │ ✓ Client can cancel anytime                                            │
 * └─────────────────────────────────────────────────────────────────────────┘
 * 
 * ┌─────────────────────────────────────────────────────────────────────────┐
 * │ CONS                                                                    │
 * ├─────────────────────────────────────────────────────────────────────────┤
 * │ ✗ Client must process stream (not just fetch)                          │
 * │ ✗ Cannot "go back" or jump around                                      │
 * │ ✗ Connection must stay open                                            │
 * │ ✗ Error handling is more complex                                       │
 * └─────────────────────────────────────────────────────────────────────────┘
 * 
 * ┌─────────────────────────────────────────────────────────────────────────┐
 * │ WHEN TO USE                                                             │
 * ├─────────────────────────────────────────────────────────────────────────┤
 * │ • Data exports (CSV, reports)                                          │
 * │ • Large data synchronization                                           │
 * │ • Real-time event feeds                                                │
 * │ • When client needs ALL matching data                                  │
 * │ • ETL pipelines                                                        │
 * └─────────────────────────────────────────────────────────────────────────┘
 */
message StreamUsersRequest {
  // Filter criteria
  UserFilter filter = 1;
  
  // Sort order
  UserSort sort = 2;
  
  // Optional: limit total streamed items (0 = unlimited)
  int32 limit = 3;
}
// Response: stream User (each user sent individually)


/**
 * ============================================================================
 * ADVANCED SEARCH
 * ============================================================================
 */
message SearchUsersRequest {
  // Full-text search query
  string query = 1;
  
  // Filter criteria (combined with search)
  UserFilter filter = 2;
  
  // Pagination
  int32 page_size = 3;
  string page_token = 4;
  
  // Sort order
  UserSort sort = 5;
}

message SearchUsersResponse {
  repeated UserSearchResult results = 1;
  string next_page_token = 2;
  bool has_more = 3;
  int32 total_count = 4;
}

message UserSearchResult {
  User user = 1;
  // Search relevance score
  float score = 2;
  // Highlighted snippets showing match
  repeated string highlights = 3;
}


/**
 * ============================================================================
 * FILTER MESSAGE
 * ============================================================================
 * 
 * Using wrapper types allows distinguishing between:
 *   - Field not set (no filter)
 *   - Field set to default value (filter by that value)
 * 
 * Example: 
 *   age_min not set = no minimum age filter
 *   age_min set to 0 = filter where age >= 0
 */
message UserFilter {
  // Status filter (equality)
  UserStatus status = 1;
  
  // Status filter (IN operator - multiple values)
  repeated UserStatus statuses = 2;
  
  // Role filter
  UserRole role = 3;
  
  // Department filter (equality)
  string department = 4;
  
  // Department filter (IN operator)
  repeated string departments = 5;
  
  // Age range filters
  google.protobuf.Int32Value age_min = 6;
  google.protobuf.Int32Value age_max = 7;
  google.protobuf.Int32Value age_eq = 8;
  
  // Salary range filters
  google.protobuf.Int64Value salary_min = 9;
  google.protobuf.Int64Value salary_max = 10;
  
  // Date range filters
  google.protobuf.Timestamp created_after = 11;
  google.protobuf.Timestamp created_before = 12;
  
  // Text search (searches across name and email)
  string search = 13;
  
  // Email contains
  string email_contains = 14;
  
  // ID list filter (for batch lookups)
  repeated string ids = 15;
}


/**
 * ============================================================================
 * SORT MESSAGE
 * ============================================================================
 */
message UserSort {
  UserSortField field = 1;
  SortOrder order = 2;
}

enum UserSortField {
  USER_SORT_FIELD_UNSPECIFIED = 0;
  USER_SORT_FIELD_CREATED_AT = 1;
  USER_SORT_FIELD_FIRST_NAME = 2;
  USER_SORT_FIELD_LAST_NAME = 3;
  USER_SORT_FIELD_EMAIL = 4;
  USER_SORT_FIELD_AGE = 5;
  USER_SORT_FIELD_SALARY = 6;
}

enum SortOrder {
  SORT_ORDER_UNSPECIFIED = 0;
  SORT_ORDER_ASC = 1;
  SORT_ORDER_DESC = 2;
}
